--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             </div>
 
             
-      <div class="container">
+      <div class="container" style="width: 500px" >
         <!-- Modal -->
         <div class="modal fade" id="orderDiv" role="dialog">
           <div class="modal-dialog">
