--- a/index.html
+++ b/index.html
@@ -41,15 +41,14 @@
           font-size: 3.5rem;
         }
       }
+
+
     </style>
 
 
     <title>BurgerKing</title>
   </head>
   <body>
-
-    <style>
-    </style>
       
     <header>
       <div class="collapse bg-dark" id="navbarHeader">
@@ -120,17 +119,17 @@
             </div>
 
             
-      <div class="container" style="width: 500px" >
+      <div class="container">
         <!-- Modal -->
         <div class="modal fade" id="orderDiv" role="dialog">
-          <div class="modal-dialog">
+          <div class="modal-dialog" style="max-width: 100%; width: auto; display: table; min-width: 500px;">
             <!-- Modal content-->
             <div class="modal-content">
               <div class="modal-header">
                 <h4 class="modal-title">Order List</h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
               </div>
-              <div class="modal-body">                
+              <div class="modal-body">             
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
