--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
         margin-left: 7px;
       }
 
+      #btn-cancel, #btn-add {
+        font-size: small;
+      }
+
       .xCountClass {
         margin-left: 18px;
       }
