'Subtract-btn-update'

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         }
       }
 
-      #btn-cancel, #btn-add, #xCount, .card-text {
+      #btn-Subtract, #btn-add, #xCount, .card-text {
         margin-left: 7px;
       }
 
-      #btn-cancel, #btn-add {
+      #btn-Subtract, #btn-add {
         font-size: small;
       }
 
