'add-subtract-complite'

--- a/index.html
+++ b/index.html
@@ -50,12 +50,16 @@
         font-size: small;
       }
 
-      .xCountClass {
-        margin-left: 18px;
+      #infoDiv {
+        text-align: center;
       }
 
-      #infoDiv {
-        margin-bottom: 10px;
+      .card-title {
+        text-align: center;
+      }
+
+      #xNum {
+        margin-top: 10px;
       }
       
     </style>
